--- a/base.html
+++ b/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Virtual Art Gallery: ARTIC paintings</title>
+    <title>Worldbridger One Virtual Art, Environment, and Sound Gallery</title>
     <meta name="description" content="Explore a virtual art gallery on your browser. This procedurally generated architecture displays the paintings of the Art Institute of Chicago museum.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
