--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <script inline-htmlify></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
